--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
          data-shape="rectangular"
          data-logo_alignment="left">
     </div>
+    <!-- Fetch Emails Button (hidden by default, shown after sign-in) -->
+    <button id="fetch-emails-btn" style="display:none; margin-top:10px;"><i class="fas fa-envelope-open-text"></i> Fetch Emails</button>
 
     <!-- Email API Integration -->
     <script src="email-api.js"></script>
